tests/type-mismatch.stderr
error[E032]: expected type `crate.X`, got type `Type`
  >>> ${DIRECTORY}/type-mismatch.lushui:18:4
   |
18 | a: X = Type
   |    - expected due to this
   |
  >>> ${DIRECTORY}/type-mismatch.lushui:18:8
   |
18 | a: X = Type
   |        ^^^^ has wrong type
   |

error[E032]: expected type `Type`, got type `crate.X`
  >>> ${DIRECTORY}/type-mismatch.lushui:19:4
   |
19 | b: Type = X.x
   |    ---- expected due to this
   |
  >>> ${DIRECTORY}/type-mismatch.lushui:19:11
   |
19 | b: Type = X.x
   |           ^^^ has wrong type
   |

error[E032]: expected type `Type`, got type `crate.core.bool.Bool`
  >>> ${DIRECTORY}/type-mismatch.lushui:23:4
   |
23 | x: false = false
   |    ^^^^^ has wrong type
   |

error[E032]: expected type `crate.core.bool.Bool`, got type `crate.core.nat.Nat`
  >>> ${DIRECTORY}/type-mismatch.lushui:25:10
   |
25 | take (b: Bool): Bool = true
   |          ---- expected due to this
   |
  >>> ${DIRECTORY}/type-mismatch.lushui:27:16
   |
27 | t: Bool = take 44
   |                ^^ has wrong type
   |

error: aborting due to 4 previous errors

